// Vitest Snapshot v1

exports[`Admin adminSampleEntities > No result - float seed 1`] = `
[
  [
    "adminEntitySearchTotalCount",
    _SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;

exports[`Admin adminSampleEntities > No result 1`] = `
[
  [
    "adminEntitySearchTotalCount",
    _SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;

exports[`Admin adminSampleEntities > One result 1`] = `
[
  [
    "adminEntitySampleEntities",
    _SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
    },
    undefined,
    0,
    25,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
  [
    "adminEntitySearchTotalCount",
    _SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;
